extend preview of featured articles

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                 <label class="article-info" id="article-info-2">
                   <p class="indent-16 text-justify line-clamp-3 max-w mb-5 my-2">
                     The Pride of Aloha, from Norwegian Cruise Lines new subsidiary NCL America, entered regular service in the Hawaiian Island on July 4th,
-                    2004. I was able to board the Pride on July 3rd and experience the ship during a one nigh charitable fundraiser cruise.
+                    2004. I was able to board the Pride on July 3rd and experience the ship during a one nigh charitable fundraiser cruise. This is not a new
+                    ship, it is actually the Norwegian Sky. The Sky has been known as having small cabins, and the same problems with Freestyle dining that many
+                    find difficult to understand and unfair. But this ship is a big improvement over the Norwegian Star that NCL used to operate in the islands.
                   </p>
                   <a
                     href="http://www.travelassist.com/mag/a134.html"
@@ -166,7 +168,10 @@
                   <p class="indent-16 text-justify line-clamp-3 max-w mb-5 my-2">
                     When a casino vacation comes to mind, one generally thinks about megaresorts, expensive restaurants with celebrity chefs, and explosive
                     volcanoes. This is true for the almost 34 million people who visited Las Vegas last year. But some people are just burnt out on the entire
-                    Vegas party scene, the cure to that? RENO!
+                    Vegas party scene, the cure to that? RENO! Reno is a much more laid-back type a place with the good old feeling of employees who smile,
+                    oyster bars, and three-digit room counts. "The Biggest Little City in the World" is not at all like Vegas, and it doesn't try to be. Not
+                    only can you find exciting city fun here, but you also can find great golfing, skiing, and sightseeing. Not only is Reno great, but
+                    affordable! When going to Reno, you need to know what to expect.
                   </p>
                   <a
                     href="http://www.travelassist.com/mag/vic_7.html"
@@ -182,7 +187,10 @@
                   <p class="indent-16 text-justify line-clamp-3 max-w mb-5 my-2">
                     What does a CABIN bus look like? I understand it isn't a normal bus, but an overnight sleeper bus full of beds that runs between San
                     Francisco and Los Angeles. The route is pretty simple. Two overnight CABIN buses depart at 11pm; one is heading South from San Francisco and
-                    another heading North out of Los Angeles. Both arrive at 7am at their destinations.
+                    another heading North out of Los Angeles. Both arrive at 7am at their destinations.When I arrived at 10:45pm the CABIN coach was right were
+                    it should be in an empty parking lot just below the Oakland Bay Bridge. An attendant confirmed my reservation and showed me around the lower
+                    level of the bus. It included a restroom and some booths for those who can't or do not want to sleep. Upstairs are the sleeping berths. If I
+                    had luggage, it would have been stored by the attendant and not accessible during the trip.
                   </p>
                   <a
                     href="https://www.murrayontravel.com/usa---california/"
@@ -217,7 +225,11 @@
                   <p class="indent-16 text-justify line-clamp-3 max-w mb-5 my-2">
                     Key West, North America's most eclectic town, called by long-time residents "the end of the road," is the gathering place for the homeless
                     with an artistic bend, musicians, millionaires, tipplers, treasure hunters and thousands of mobile middle-aged singles who take a stab at
-                    the town for a few months.
+                    the town for a few months. Located 130 miles off the coast of Florida, closer to Cuba than to Miami, and the southernmost town in the United
+                    States, Key West has a mind boggling sense of freedom and let live. Most Keywesters think of themselves as artists or free spirits who enjoy
+                    art and the Bohemian lifestyle. In place of a movie script in their back pockets, ala Hollywood, Keywesters will whip out their paintbrush
+                    and sculpture knife. The little town is a dream fulfilled for the burned out Boston stock broker who once dabbled in oils on weekends
+                    between conference calls.
                   </p>
                   <a
                     href="http://www.travelassist.com/mag/a123.html"
