--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/x-icon" href="./public/faviconV2.png" />
     <title>TravelASSIST Magazine</title>
   </head>
-  <body class="bg-orange-50 flex-col flex px-6 h-full">
+  <body class="flex-col flex px-6 h-full">
     <header id="title-page" class="w-full flex flex-col mt-6 h-full">
-      <h1 class="line-clamp-1 text-red-500 text-5xl font-black text-center lg:text-7xl cursor-pointer z-50">TravelASSIST</h1>
+      <h1 class="line-clamp-1 text-red-500 font-semibold text-5xl sm:text-6xl text-center lg:text-7xl cursor-pointer z-50">TravelAssist</h1>
       <div id="txt-magazine-container" class="inline-flex items-center justify-center w-full">
-        <hr class="w-full h-px mt-3 mb-6 border-slate-950" />
-        <h1 class="absolute px-4 pb-3 font-black -translate-x-1/2 left-1/2 text-slate-950 bg-orange-50 text-2xl md:text-3xl text-center">MAGAZINE</h1>
+        <hr class="w-full h-px my-5 lg:my-3 border-slate-950" />
+        <h2 class="absolute px-4 font-black -translate-x-1/2 left-1/2 text-slate-950 text-2xl md:text-3xl text-center">MAGAZINE</h2>
       </div>
 
       <nav class="uppercase text-xl flex flex-col gap-3 z-50">
@@ -35,8 +35,8 @@
       </nav>
     </header>
 
-    <figure class="relative w-full mt-7">
-      <img src="./public/travel-pics/title-img.jpg" alt="travel image" class="object-cover h-full w-full" />
+    <figure class="relative w-full mt-3">
+      <div id="title-img" class="h-full w-full"></div>
       <figcaption class="bg-black bg-opacity-60 absolute px-6 pb-4 text-justify text-lg text-white bottom-0 w-full">
         <h2 class="my-3 text-2xl sm:text-4xl sm:py-4 lg:py-2 text-center">Home of the First Travel Magazine to be published on the Web!</h2>
         <p class="indent-16 pb-2 sm:py-2 text-xs sm:text-base lg:max-w-4xl mx-auto lg:pb-2">
@@ -292,7 +292,7 @@
       </a>
     </section>
 
-    <footer class="h-96 mt-8 text-center">
+    <footer class="h-96 text-center">
       <hr class="my-10 border-gray-800" />
       <div id="logos" class="flex align-middle justify-center gap-5 py-4">
         <a href="https://github.com/pj-pj-pj/redesigned-travel-mag">
