--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
     </header>
 
     <figure class="relative w-full mt-3">
+      <img src="" alt="sliding travel pictures" />
       <div id="title-img" class="h-full w-full"></div>
       <figcaption class="bg-black bg-opacity-60 absolute px-6 pb-4 text-justify text-lg text-white bottom-0 w-full">
         <h2 class="my-3 text-2xl sm:text-4xl sm:py-4 lg:py-2 text-center">Home of the First Travel Magazine to be published on the Web!</h2>
